--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
+@font-face {
+  font-family: 'Lato-Bold';
+  src: local('Lato'), url('./assets/fonts/Lato-Bold.woff') format('woff');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: local('Lato'), url('./assets/fonts/Lato-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Lato-Light';
+  src: local('Lato'), url('./assets/fonts/Lato-Light.woff') format('woff');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato-Light', 'Roboto', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+strong {
+  font-family: 'Lato-Bold', 'Roboto', 'Helvetica Neue', sans-serif; 
 }
